tests/macros/local_variable/not_found.stderr
error[E0425]: cannot find value `name` in this scope
 --> $DIR/not_found.rs:2:35
  |
2 |     discourse::questions![Input { name }];
  |                                   ^^^^ not found in this scope
