tests/macros/local_variable/not_found.rs
fn main() {
    discourse::questions![Input { name }];
}
